<resources>
    <string name="app_name">Tweeter</string>

    <string name="logoutMenuTitle">Logout</string>

    <string name="homePageTitle">Home</string>
    <string name="userImageContentDescription">The user\'s image</string>

    <string name="title_activity_main">Tweeter</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>

    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleUserName">The User</string>
    <string name="title_activity_login">Sign in</string>
    <string name="followeeCount">Following: %1$d</string>
    <string name="followerCount">Followers: %1$d</string>
    <string name="sampleStatus">Sample Status That is verry long and can take up a lot of space and i still have sticky keys on my laptop and it is annoying a heck and i wat to just have a normal keyboard again lol</string>
    <string name="sampleTimestamp">Sample Timestamp</string>
    <string name="title_activity_login__tabs">Login_Tabs</string>
    <string name="tab_text_1">Login</string>
    <string name="tab_text_2">Register</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="string_username">username</string>
    <string name="string_password">password</string>
    <string name="login_button">Login</string>
    <string name="string_firstname">first name</string>
    <string name="string_lastname">last name</string>
    <string name="register_button">Register</string>
    <string name="take_picture">Take Profile Picture</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="follow">Follow</string>
</resources>
