<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <EditText
            android:id="@+id/register_firstname"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/string_firstname" />
        <EditText
            android:id="@+id/register_lastname"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/string_lastname" />
        <EditText
            android:id="@+id/register_username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/string_username" />
        <EditText
            android:id="@+id/register_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/string_password" />
        <TextView
            android:id="@+id/register_profile"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/take_picture"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onProfileClicked"/>
        <Button
            android:id="@+id/register_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:onClick="onRegisteredClicked"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>